--- a/src/sample/loginForm.fxml
+++ b/src/sample/loginForm.fxml
@@ -22,7 +22,7 @@
       <TextField fx:id="passwordTextbox" layoutX="182.0" layoutY="212.0" />
       <Label fx:id="usernameLabel" layoutX="120.0" layoutY="149.0" text="Username" />
       <Label fx:id="passwordLabel" layoutX="122.0" layoutY="216.0" text="Password" />
-      <Label fx:id="locationLabel" layoutX="234.0" layoutY="111.0" text="Location" />
+      <Label fx:id="ZoneIDLabel" layoutX="234.0" layoutY="111.0" text="ZoneID" />
       <Button fx:id="loginButton" layoutX="285.0" layoutY="246.0" mnemonicParsing="false" onAction="#onLoginButtonAction" text="Login" />
     </children>
 </AnchorPane>
