--- a/src/sample/View/modifyCustomer.fxml
+++ b/src/sample/View/modifyCustomer.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller.ModifyCustomer"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.ModifyCustomer">
+    <children>
+        <Label layoutX="17.0" layoutY="14.0" text="Modify Customer">
+            <font>
+                <Font name="System Bold" size="48.0" />
+            </font>
+        </Label>
+        <Label layoutX="14.0" layoutY="85.0" text="Customer ID" />
+        <Label layoutX="14.0" layoutY="125.0" text="Name" />
+        <Label layoutX="14.0" layoutY="165.0" text="Phone #" />
+        <Label layoutX="14.0" layoutY="205.0" text="Country" />
+        <Label layoutX="14.0" layoutY="245.0" text="Postal Code" />
+        <Label layoutX="14.0" layoutY="285.0" text="State/Province" />
+        <Label layoutX="14.0" layoutY="325.0" text="City" />
+        <Label layoutX="14.0" layoutY="365.0" text="Address" />
+        <TextField fx:id="ModifyCustomerIDBox" disable="true" layoutX="95.0" layoutY="85.0" />
+        <TextField fx:id="ModifyCustomerNameBox" layoutX="95.0" layoutY="125.0" />
+        <TextField fx:id="ModifyCustomerPhoneBox" layoutX="95.0" layoutY="165.0" />
+        <ComboBox fx:id="ModifyCustomerCountryCombo" layoutX="95.0" layoutY="205.0" prefWidth="150.0" />
+        <TextField fx:id="ModifyCustomerPostalBox" layoutX="95.0" layoutY="245.0" />
+        <ComboBox fx:id="ModifyCustomerStateCombo" layoutX="95.0" layoutY="285.0" prefWidth="150.0" />
+        <TextField fx:id="ModifyCustomerCityBox" layoutX="95.0" layoutY="325.0" />
+        <TextField fx:id="ModifyCustomerAddressBox" layoutX="95.0" layoutY="365.0" />
+        <Button fx:id="ModifyCustomerSaveButton" layoutX="830.0" layoutY="535.0" mnemonicParsing="false" onAction="#onModifyCustomerSaveButtonAction" text="Save" />
+        <Button fx:id="ModifyCustomerCancelButton" layoutX="890.0" layoutY="535.0" mnemonicParsing="false" onAction="#onModifyCustomerCancelButtonAction" text="Cancel" />
+        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="270.0" visible="true" wrapText="true">
+            <font>
+                <Font name="System Bold" size="16.0" />
+            </font></TextArea>
+    </children>
 </AnchorPane>
