--- a/src/sample/View/mainForm.fxml
+++ b/src/sample/View/mainForm.fxml
@@ -4,25 +4,68 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.MainForm">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.MainForm">
     <children>
-        <Label fx:id="mainScreenTitleLabel" layoutX="17.0" layoutY="14.0" text="Meeting Scheduling System">
+        <Label layoutX="17.0" layoutY="14.0" text="Meeting Scheduling System">
             <font>
-                <Font name="System Bold" size="24.0" />
+                <Font name="System Bold" size="48.0" />
             </font>
         </Label>
         <Button fx:id="ExitButton" layoutX="890.0" layoutY="535.0" mnemonicParsing="false" onAction="#onExitButtonAction" prefHeight="27.0" prefWidth="60.0" text="Exit" />
-        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="220.0" promptText="Error Message Box" visible="true" wrapText="true">
+        <AnchorPane fx:id="CustomerAnchorPane" layoutX="17.0" layoutY="130.0" prefHeight="350.0" prefWidth="280.0">
+            <children>
+                <TableView fx:id="CustomerTable" layoutX="8.0" layoutY="58.0" prefHeight="223.0" prefWidth="250.0">
+                    <columns>
+                        <TableColumn fx:id="customerTableCustomerIDCol" prefWidth="85.0" text="Customer ID" />
+                        <TableColumn fx:id="customerTableCustomerNameCol" prefWidth="165.0" text="Customer Name" />
+                    </columns>
+                </TableView>
+                <Button fx:id="customerDeleteButton" layoutX="181.0" layoutY="287.0" mnemonicParsing="false" onAction="#onCustomerDeleteButtonAction" text="Delete" />
+                <Button fx:id="customerModifyButton" layoutX="118.0" layoutY="287.0" mnemonicParsing="false" onAction="#onCustomerModifyButtonAction" text="Modify" />
+                <Button fx:id="customerAddButton" layoutX="70.0" layoutY="287.0" mnemonicParsing="false" onAction="#onCustomerAddButtonAction" text="Add" />
+                <Label layoutX="14.0" layoutY="14.0" text="Customers">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="AppointmentAnchorPane" layoutX="310.0" layoutY="130.0" prefHeight="350.0" prefWidth="680.0">
+            <children>
+                <TableView fx:id="AppointmentTable" layoutX="8.0" layoutY="58.0" prefHeight="320.0" prefWidth="650.0">
+                    <columns>
+                        <TableColumn fx:id="AppointmentTableAppointmentIDCol" prefWidth="60.0" text="Appt. ID" />
+                        <TableColumn fx:id="AppointmentTableTitleCol" prefWidth="65.0" text="Title" />
+                        <TableColumn fx:id="AppointmentTableDescriptionCol" prefWidth="70.0" text="Description" />
+                        <TableColumn fx:id="AppointmentTableLocationCol" prefWidth="65.0" text="Location" />
+                        <TableColumn fx:id="AppointmentTableContactCol" prefWidth="65.0" text="Contact" />
+                        <TableColumn fx:id="AppointmentTableTypeCol" prefWidth="65.0" text="Type" />
+                        <TableColumn fx:id="AppointmentTableStartDateAndTimeCol" prefWidth="65.0" text="Start" />
+                        <TableColumn fx:id="AppointmentTableEndDateAndTimeCol" prefWidth="55.0" text="End" />
+                        <TableColumn fx:id="AppointmentTableCustomerIDCol" prefWidth="80.0" text="Customer ID" />
+                        <TableColumn fx:id="AppointmentTableUserIDCol" prefWidth="60.0" text="User ID" />
+                    </columns>
+                </TableView>
+                <Button fx:id="AppointmentDeleteButton" layoutX="581.0" layoutY="22.0" mnemonicParsing="false" onAction="#onAppointmentDeleteButtonAction" text="Delete" />
+                <Button fx:id="AppointmentModifyButton" layoutX="518.0" layoutY="22.0" mnemonicParsing="false" onAction="#onAppointmentModifyButtonAction" text="Modify" />
+                <Button fx:id="AppointmentAddButton" layoutX="470.0" layoutY="22.0" mnemonicParsing="false" onAction="#onAppointmentAddButtonAction" text="Add" />
+                <Label layoutX="14.0" layoutY="14.0" text="Appointments">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Label>
+            <RadioButton fx:id="appointmentsWeeklyRadio" layoutX="158.0" layoutY="22.0" mnemonicParsing="false" onAction="#onAppointmentsWeeklyRadioAction" selected="true" text="Weekly">
+               <toggleGroup>
+                  <ToggleGroup fx:id="WeekOrMonth" />
+               </toggleGroup></RadioButton>
+            <RadioButton fx:id="appointmentsMonthlyRadio" layoutX="258.0" layoutY="22.0" mnemonicParsing="false" onAction="#onAppointmentsMonthlyRadioAction" text="Monthly" toggleGroup="$WeekOrMonth" />
+            </children>
+        </AnchorPane>
+        <TextArea fx:id="errorMessageBox" editable="false" layoutX="17.0" layoutY="462.0" prefHeight="113.0" prefWidth="220.0" wrapText="true">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font></TextArea>
-        <Button fx:id="confirmButton" layoutX="26.0" layoutY="548.0" mnemonicParsing="false" onAction="#onConfirmButtonAction" text="Yes" visible="true" />
-        <Button fx:id="denyButton" layoutX="69.0" layoutY="548.0" mnemonicParsing="false" onAction="#onDenyButtonAction" text="No" visible="true" />
-        <TextField fx:id="usernameTextbox" layoutX="182.0" layoutY="145.0" />
-        <TextField fx:id="passwordTextbox" layoutX="182.0" layoutY="212.0" />
-        <Label fx:id="usernameLabel" layoutX="120.0" layoutY="149.0" text="Username" />
-        <Label fx:id="passwordLabel" layoutX="122.0" layoutY="216.0" text="Password" />
-        <Label fx:id="ZoneIDLabel" layoutX="234.0" layoutY="111.0" text="ZoneID" />
-        <Button fx:id="loginButton" layoutX="285.0" layoutY="246.0" mnemonicParsing="false" onAction="#onLoginButtonAction" text="Login" />
+        <Button fx:id="confirmButton" layoutX="246.0" layoutY="494.0" mnemonicParsing="false" onAction="#onConfirmButtonAction" text="Yes" />
+        <Button fx:id="denyButton" layoutX="247.0" layoutY="536.0" mnemonicParsing="false" onAction="#onDenyButtonAction" text="No" />
     </children>
 </AnchorPane>
