--- a/src/sample/loginForm.fxml
+++ b/src/sample/loginForm.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginForm">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.loginForm">
     <children>
         <Label fx:id="mainScreenTitleLabel" layoutX="17.0" layoutY="14.0" text="Meeting Scheduling System">
             <font>
@@ -12,16 +12,16 @@
             </font>
         </Label>
         <Button fx:id="ExitButton" layoutX="890.0" layoutY="535.0" mnemonicParsing="false" onAction="#onExitButtonAction" prefHeight="27.0" prefWidth="60.0" text="Exit" />
-        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="220.0" promptText="Error Message Box" visible="true" wrapText="true">
+        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="220.0" promptText="Error Message Box" visible="false" wrapText="true">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font></TextArea>
-        <Button fx:id="confirmButton" layoutX="26.0" layoutY="548.0" mnemonicParsing="false" onAction="#onConfirmButtonAction" text="Yes" visible="true" />
-        <Button fx:id="denyButton" layoutX="69.0" layoutY="548.0" mnemonicParsing="false" onAction="#onDenyButtonAction" text="No" visible="true" />
+        <Button fx:id="confirmButton" layoutX="26.0" layoutY="548.0" mnemonicParsing="false" onAction="#onConfirmButtonAction" text="Yes" visible="false" />
+        <Button fx:id="denyButton" layoutX="69.0" layoutY="548.0" mnemonicParsing="false" onAction="#onDenyButtonAction" text="No" visible="false" />
       <TextField fx:id="usernameTextbox" layoutX="182.0" layoutY="145.0" />
       <TextField fx:id="passwordTextbox" layoutX="182.0" layoutY="212.0" />
-      <Label fx:id="usernameLabel" layoutX="120.0" layoutY="149.0" text="Username" />
-      <Label fx:id="passwordLabel" layoutX="122.0" layoutY="216.0" text="Password" />
+      <Label fx:id="usernameLabel" layoutX="59.0" layoutY="149.0" text="Username" />
+      <Label fx:id="passwordLabel" layoutX="61.0" layoutY="216.0" text="Password" />
       <Label fx:id="ZoneIDLabel" layoutX="234.0" layoutY="111.0" text="ZoneID" />
       <Button fx:id="loginButton" layoutX="285.0" layoutY="246.0" mnemonicParsing="false" onAction="#onLoginButtonAction" text="Login" />
     </children>
