--- a/src/sample/View/modifyCustomer.fxml
+++ b/src/sample/View/modifyCustomer.fxml
@@ -29,7 +29,7 @@
         <TextField fx:id="ModifyCustomerAddressBox" layoutX="95.0" layoutY="365.0" />
         <Button fx:id="ModifyCustomerSaveButton" layoutX="830.0" layoutY="535.0" mnemonicParsing="false" onAction="#onModifyCustomerSaveButtonAction" text="Save" />
         <Button fx:id="ModifyCustomerCancelButton" layoutX="890.0" layoutY="535.0" mnemonicParsing="false" onAction="#onModifyCustomerCancelButtonAction" text="Cancel" />
-        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="270.0" visible="true" wrapText="true">
+        <TextArea fx:id="errorMessageBox" editable="false" layoutX="14.0" layoutY="416.0" prefHeight="113.0" prefWidth="270.0" visible="false" wrapText="true">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font></TextArea>
