--- a/src/sample/View/addCustomer.fxml
+++ b/src/sample/View/addCustomer.fxml
@@ -22,7 +22,7 @@
       <TextField fx:id="addCustomerIDBox" disable="true" layoutX="95.0" layoutY="85.0" text="Auto-Gen" />
       <TextField fx:id="addCustomerNameBox" layoutX="95.0" layoutY="125.0" />
       <TextField fx:id="addCustomerPhoneBox" layoutX="95.0" layoutY="165.0" />
-      <ComboBox fx:id="addCustomerCountryCombo" layoutX="95.0" layoutY="205.0" prefWidth="150.0" />
+      <ComboBox fx:id="addCustomerCountryCombo" layoutX="95.0" layoutY="205.0" onAction="#onAddCustomerCountryComboAction" prefWidth="150.0" />
       <TextField fx:id="addCustomerPostalBox" layoutX="95.0" layoutY="245.0" />
       <ComboBox fx:id="addCustomerStateCombo" layoutX="95.0" layoutY="285.0" prefWidth="150.0" />
       <TextField fx:id="addCustomerCityBox" layoutX="95.0" layoutY="325.0" />
